kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-3-front
  namespace: homework
  labels:
    app: hw-3-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hw-3-front
  template:
    metadata:
      labels:
        app: hw-3-front
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.3
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: shared-volume
          mountPath: /homework
        - name: nginx-config-volume
          mountPath: /etc/nginx
          readOnly: true
        lifecycle:
          preStop:
            exec:
              command: ["rm", "-rf", "/homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: shared-volume
        emptyDir: {}
      - name: nginx-config-volume
        configMap:
          name: nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf
      nodeSelector:
        homework: "true"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
